--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -15,6 +15,21 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site)
 const { title, description, image = '/static/twitter-card.png' } = Astro.props
 ---
 
+<script>
+  (function () {
+    const getThemePreference = () => {
+      if (localStorage.getItem('theme')) {
+        return localStorage.getItem('theme');
+      }
+      return window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'theme-light';
+    };
+
+    if (getThemePreference() === 'dark') {
+      document.documentElement.classList.add('dark');
+    }
+  })();
+</script>
+
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <meta name="generator" content={Astro.generator} />
@@ -78,8 +93,6 @@ const { title, description, image = '/static/twitter-card.png' } = Astro.props
       });
     }
   }
-
-  setDarkMode(document);
 
   document.addEventListener('astro:before-swap', (ev) => {
     if (ev.newDocument) { // Ensure newDocument is defined
